--- a/src/main/resources/static/css/cart/payment.css
+++ b/src/main/resources/static/css/cart/payment.css
@@ -53,6 +53,10 @@ h3 {
     font-size: 18px;
     text-align: start;
 }
+.left-section td {
+	text-align: left;
+	min-width: 80px;
+}
 tr > td:nth-child(1){
 	display: flex;
 }
@@ -61,46 +65,99 @@ td > p{
     text-align: start;
 }
 .book-detail{
-	margin-right: 20px;
 	padding: 30px;
+	width: 350px;
 }
 
+/* 쿠폰 */
+#selectedCoupon {
+    margin: 20px;
+    font-size: 16px;
+}
+.coupon_number{
+	font-size: 16px;
+	margin-left: 5px;
+}
 
-/* 결제수단 */
-.payment-section {
+/* 쿠폰 모달창 */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
     background-color: #fff;
-    padding: 15px;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 5px;
+    position: relative;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+}
+
+.coupon-text{
+	margin-bottom: 40px;
+}
+.coupon-list {
+    margin-top: 20px;
+}
+
+.coupon-item {
+    display: block;
+    padding: 10px;
+    margin: 5px 0;
+    background-color: #f9f9f9;
+    border-radius: 5px;
     border: 1px solid #ddd;
+    cursor: pointer;
 }
 
-.payment-section h2 {
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-
-.payment-options label {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.payment-options input[type="radio"] {
+.coupon-item input {
     margin-right: 10px;
 }
 
-.bookbook-pay {
-    background-color: #e0f7fa;
-    padding: 3px 5px;
-    border-radius: 5px;
-    margin-left: 10px;
-    color: #00796b;
-    font-size: 12px;
+.coupon-item:hover {
+    background-color: #f1f1f1;
 }
 
-.other-payments {
-    display: flex;
-    flex-wrap: wrap;
+.select-button {
+    margin-top: 40px;
+    padding: 10px 20px;
+    background-color: var(--main-orange);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
 }
+
+.select-button:hover {
+    background-color: var(--light-orange);
+}
+
 
 .grey-button {
     background-color: #fff;
@@ -109,7 +166,6 @@ td > p{
     cursor: pointer;
     transition: background-color 0.3s ease;
     display: block;
-    margin-left: 10px;
 }
 
 .grey-button:hover {
