--- a/src/main/resources/templates/views/admin/inventory.html
+++ b/src/main/resources/templates/views/admin/inventory.html
@@ -69,58 +69,32 @@
 				<div class="action-buttons">
 					<button>삭제</button>
 					<button>비활성화</button>
-					<button>판매변경 ▼</button>
 				</div>
 
 				<table>
 					<thead>
 						<tr>
 							<th><input type="checkbox" id="select-item"></th>
-							<th>상품명</th>
-							<th>판매가</th>
-							<th>판매상태</th>
+							<th>도서번호</th>
+							<th>제목</th>
+							<th>상품</th>
+							<th>저자</th>
+							<th>출판사</th>
 							<th>바로구매 URL</th>
-							<th>상품 등록일</th>
+							<th>판매가</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
+						<tr th:each="dto : ${list}">
 							<td><input type="checkbox" class="select-item"></td>
-							<td>테스트상품 22</td>
-							<td>10,000</td>
-							<td>판매중</td>
-							<td>
-								http://m.ectopsu1607.caf
-								<button>주소복사</button>
-
-							</td>
-							<td>2019-06-14</td>
+							<td th:text="${dto.bookNum}"></td>
+							<td th:text="${dto.bookName}"></td>
+							<td><img th:src="${bookImg}"></td>
+							<td th:text="${dto.author}"></td>
+							<td th:text="${dto.publisher}"></td>
+							<td th:text="${dto.link}"></td>
+							<td th:text="${dto.discount}"></td>
 						</tr>
-						<tr>
-							<td><input type="checkbox" class="select-item"></td>
-							<td>테스트상품 22</td>
-							<td>10,000</td>
-							<td>판매중</td>
-							<td>
-								http://m.ectopsu1607.caf
-								<button>주소복사</button>
-
-							</td>
-							<td>2019-06-14</td>
-						</tr>
-						<tr>
-							<td><input type="checkbox" class="select-item"></td>
-							<td>테스트상품 22</td>
-							<td>10,000</td>
-							<td>판매중</td>
-							<td>
-								http://m.ectopsu1607.caf
-								<button>주소복사</button>
-
-							</td>
-							<td>2019-06-14</td>
-						</tr>
-						<!-- 추가 행들... -->
 					</tbody>
 				</table>
 			</div>
