--- a/src/main/resources/templates/views/cart/completion.html
+++ b/src/main/resources/templates/views/cart/completion.html
@@ -28,7 +28,7 @@
 		<div class="payment-info">
 			<p class="main-text">주문이 완료되었습니다.
 			<p>
-			<p class="order-number">주문번호 : 2024080192123998</p>
+			<p class="order-number" th:text="${주문번호 : merchantUid}">주문번호 : 2024080192123998</p>
 
 			<div class="button-container">
 				<button class="button primary-button">계속 쇼핑하기</button>
