--- a/src/main/resources/templates/views/admin/exchange.html
+++ b/src/main/resources/templates/views/admin/exchange.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
+	<script src="/js/admin/commons.js"></script>
 	<script src="/js/admin/sidebar.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -99,6 +100,7 @@
 
 					</tbody>
 				</table>
+				<div id="pagination" class="pagination-container"></div>
 			</div>
 		</div>
 </body>
