--- a/src/main/resources/templates/views/admin/inquiry-list.html
+++ b/src/main/resources/templates/views/admin/inquiry-list.html
@@ -24,7 +24,7 @@
 				<div class="content">답변 내용이 없습니다.</div>
 			</div>
 			<div class="btn">
-				<button><a href="/admin/inquiry/write">답변하기</a></button>
+				<button><a th:href="|/admin/inquiry/write/${qna.qnaNum}|">답변하기</a></button>
 			</div>
 		</div>
 	</div>
