--- a/src/main/resources/templates/views/admin/inquiry.html
+++ b/src/main/resources/templates/views/admin/inquiry.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
+	<script src="/js/admin/commons.js"></script>
 	<script src="/js/admin/sidebar.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>>
+</head>
 
 <body>
 	<div style="display: flex;">
@@ -70,6 +71,7 @@
 						</tr>
 					</tbody>
 				</table>
+				<div id="pagination" class="pagination-container"></div>
 			</div>
 		</div>
 	</div>
