--- a/src/main/resources/templates/views/admin/sidebar.html
+++ b/src/main/resources/templates/views/admin/sidebar.html
@@ -12,6 +12,7 @@
 				<a class="menu">상품 관리</a>
 				<ul class="submenu">
 					<li><a href="/admin/inventory">상품목록</a></li>
+					<li><a href="/admin/inventory/approval">상품승인목록</a></li>
 				</ul>
 			</li>
 			<li>
