--- a/src/main/resources/templates/views/seller/refund.html
+++ b/src/main/resources/templates/views/seller/refund.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
 	<script src="/js/admin/sidebar.js"></script>
+	<script src="/js/admin/commons.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -110,6 +111,7 @@
 
 					</tbody>
 				</table>
+				<div id="pagination" class="pagination-container"></div>
 			</div>
 		</div>
 </body>
