--- a/src/main/resources/static/css/admin/commons.css
+++ b/src/main/resources/static/css/admin/commons.css
@@ -5,6 +5,10 @@ body {
 	background-color: #f0f0f0;
 }
 
+img {
+	width: 30%;
+}
+
 .container {
 	width: 100%;
 	background-color: white;
@@ -113,6 +117,14 @@ td {
 .action-buttons button {
 	margin: 5px;
 }
+
+.pagination-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px; /* 원하는 상단 여백 */
+    }
+
 
 .stars {
 	color: #ffd700;
