--- a/src/main/resources/templates/views/admin/inquiry-write.html
+++ b/src/main/resources/templates/views/admin/inquiry-write.html
@@ -19,47 +19,33 @@
 			<div class="line"></div>
 			<div class="product-form">
 				<h3>답변 등록</h3>
-				<table>
-					<tbody>
-						<tr>
-							<th>제목</th>
-							<td colspan="3">
-								<input type="text" id="product-name" name="product-name" placeholder="문의 답변입니다.">
-								<span class="char-count">[0/100]</span>
-							</td>
-						</tr>
+				<form th:action="|/admin/inquiry/write/${qna.qnaNum}|" method="post">
+					<input type="hidden" th:value="${qna.qnaNum}" name="qnaNum">
+					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+					<table>
+						<tbody>
+							<tr>
+								<th>제목</th>
+								<td colspan="3">
+									<input type="text" id="product-name" name="title" placeholder="문의 답변입니다.">
+									<span class="char-count">[0/100]</span>
+								</td>
+							</tr>
 
-						<tr>
-							<th>내용</th>
-							<td colspan="3">
-								<textarea id="summary-description" name="summary-description"></textarea>
-								
-							</td>
-						</tr>
-						<tr>
-							<th>이미지</th>
-							<td colspan="3">
-								<div>
-									<label class="btn-file">
-										<input type="file" id="itemFile" onchange="fileupload(this)"
-											style="display: none;">
-										<input type="hidden" name="bucketKey" required>
-										<input type="hidden" name="orgName" required>
-										<span>+</span>
-									</label>
-									<p class="file-guide">
-										<span>권장 크기 : 1000 X 1000(윈도 대상 750 X 1000), 300 X 300 이상</span><br>
-										<span>이미지 확대 기능 : 대표 이미지 기준 1000 X 1000 이상 이미지 등록 시, 확대 기능이
-											제공됩니다.</span><br>
-									</p>
-								</div>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<div class="btn-write">
-					<button>답변등록</button>
-				</div>
+							<tr>
+								<th>내용</th>
+								<td colspan="3">
+									<textarea id="summary-description" name="content"></textarea>
+
+								</td>
+							</tr>
+						</tbody>
+					</table>
+
+					<div class="btn-write">
+						<button>답변등록</button>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
