--- a/src/main/resources/templates/views/admin/inventory.html
+++ b/src/main/resources/templates/views/admin/inventory.html
@@ -71,6 +71,7 @@
 					<button>비활성화</button>
 				</div>
 
+
 				<table>
 					<thead>
 						<tr>
@@ -82,6 +83,7 @@
 							<th>출판사</th>
 							<th>바로구매 URL</th>
 							<th>판매가</th>
+							<th>상태</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -89,17 +91,30 @@
 							<td><input type="checkbox" class="select-item"></td>
 							<td th:text="${dto.bookNum}"></td>
 							<td th:text="${dto.bookName}"></td>
-							<td><img th:src="${bookImg}"></td>
+							<td><img th:src="${dto.bookImg}"></td>
 							<td th:text="${dto.author}"></td>
 							<td th:text="${dto.publisher}"></td>
 							<td th:text="${dto.link}"></td>
 							<td th:text="${dto.discount}"></td>
+							<td>
+								<form th:action="|/admin/inventory/${dto.bookNum}|" onsubmit="return btnDeleteClicked()" method="post">
+									<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+									<input type="hidden" name="_method" value="delete">
+									<button type="submit">삭제</button>
+								</form>
+							</td>
 						</tr>
 					</tbody>
 				</table>
+				<div id="pagination" class="pagination-container"></div>
 			</div>
 		</div>
 	</div>
+	<script>
+		function btnDeleteClicked() {
+			return confirm("정말로 삭제하시겠습니까?");
+		}
+	</script>
 </body>
 
 </html>
