--- a/src/main/resources/templates/views/admin/order.html
+++ b/src/main/resources/templates/views/admin/order.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
+	<script src="/js/admin/commons.js"></script>
 	<script src="/js/admin/sidebar.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -16,9 +17,7 @@
 			<h1>주문 내역</h1>
 			<div class="search-box">
 				<div class="filter-section">
-					<select>
-						<option>주문번호</option>
-					</select>
+					<label>주문번호</label>
 					<input type="text" placeholder="검색">
 				</div>
 
@@ -189,21 +188,8 @@
 						</tr>
 						<!-- 다른 주문 항목들을 여기에 추가할 수 있습니다 -->
 					</tbody>
-					<tfoot>
-						<tr>
-							<td></td>
-							<td colspan="3"></td>
-							<td colspan="3"></td>
-							<td colspan="2">5건</td>
-							<td>46,100</td>
-							<td>10,000</td>
-							<td>1,100</td>
-							<td>0</td>
-							<td>35,000</td>
-							<td></td>
-						</tr>
-					</tfoot>
 				</table>
+				<div id="pagination" class="pagination-container"></div>
 			</div>
 		</div>
 	</div>
