--- a/src/main/resources/templates/views/admin/sign.html
+++ b/src/main/resources/templates/views/admin/sign.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
 	<script src="/js/admin/sidebar.js"></script>
-	<script src="/js/admin/sign.js"></script>
+	<script src="/js/admin/mypage.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>>
 
