--- a/src/main/resources/templates/views/seller/order.html
+++ b/src/main/resources/templates/views/seller/order.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
 	<script src="/js/admin/sidebar.js"></script>
+	<script src="/js/admin/commons.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -16,9 +17,7 @@
 			<h1>주문 내역</h1>
 			<div class="search-box">
 				<div class="filter-section">
-					<select>
-						<option>주문번호</option>
-					</select>
+					<label>주문번호</label>
 					<input type="text" placeholder="검색">
 				</div>
 
@@ -194,7 +193,6 @@
 							<td>25,000</td>
 							<td><a href="#">보기</a></td>
 						</tr>
-						<!-- 다른 주문 항목들을 여기에 추가할 수 있습니다 -->
 					</tbody>
 					<tfoot>
 						<tr>
@@ -212,6 +210,7 @@
 						</tr>
 					</tfoot>
 				</table>
+				<div id="pagination" class="pagination-container"></div>
 			</div>
 		</div>
 	</div>
