--- a/src/main/resources/static/css/mainContent/bookList.css
+++ b/src/main/resources/static/css/mainContent/bookList.css
@@ -174,7 +174,7 @@ label[for="selectAllCheckbox"] {
 	margin-left: 8px;
 }
 
-.button-container {
+.bookButton-container {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
