--- a/src/main/resources/templates/views/index/event.html
+++ b/src/main/resources/templates/views/index/event.html
@@ -2,9 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	th:replace="~{views/commons/layout::layout(~{::head} ,~{::main} ) }">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>이벤트 페이지 - 룰렛 게임</title>
 <head>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="stylesheet" href="/css/mainContent/eventRullret.css" />
+<meta name="_csrf" content="${_csrf.token}" />
+<meta name="_csrf_header" content="${_csrf.headerName}" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
@@ -27,9 +30,12 @@
 					</div>
 				</div>
 				<div class="text">"즉석 당첨! 룰렛을 돌려 특별한 혜택을 받아가세요!"</div>
-				<div id="popup_gift" class="popup">
+			</div>
+
+			<div id="popup_gift" class="popup">
+				<div class="popup-content">
+					<span class="close">&times;</span>
 					<div class="lottery_present"></div>
-					<a href="javascript:;" class="close">닫기</a>
 				</div>
 			</div>
 		</div>
