--- a/src/main/resources/templates/views/index/serchBookList.html
+++ b/src/main/resources/templates/views/index/serchBookList.html
@@ -73,7 +73,7 @@
 									<strong>오늘 도착</strong>
 								</h5>
 							</div>
-							<div class="button-container">
+							<div class="bookButton-container">
 								<button type="button" class="heart-button"
 									th:data-isbn="${book.isbn}">
 									<i class="far fa-heart"></i>
