--- a/src/main/resources/static/css/admin/sidebar.css
+++ b/src/main/resources/static/css/admin/sidebar.css
@@ -99,3 +99,40 @@ body {
 .logout img {
 	width:30%;
 }
+
+
+a {
+  color: #3498db;
+  text-decoration: none;
+  padding: 2px 4px;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+/* a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffffff;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover {
+  background-color: #e6f3fb;
+  color: #2980b9;
+}
+
+a:hover::after {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+a:active {
+  transform: translateY(1px);
+} */
