--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -58,37 +58,36 @@ input {
 }
 /* 로그인 버튼 스타일 */
 .login-buttons-wrap {
-    display: flex;
-    justify-content: space-between;
-    width: 440px; /* 전체 너비를 440px로 설정 */
-    margin: 0 auto 50px auto; /* 가운데 정렬 */
+	display: flex;
+	justify-content: space-between;
+	width: 440px; /* 전체 너비를 440px로 설정 */
+	margin: 0 auto 50px auto; /* 가운데 정렬 */
 }
 
 .login-btn {
-    flex: 1; /* 버튼을 동일한 너비로 */
-    background-color: #FF9040;
-    color: white;
-    padding: 10px 0; /* 테두리 크기 줄임 */
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    text-align: center;
-    margin: 0 5px; /* 버튼 간격 조정 */
+	flex: 1; /* 버튼을 동일한 너비로 */
+	background-color: #FF9040;
+	color: white;
+	padding: 10px 0; /* 테두리 크기 줄임 */
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	cursor: pointer;
+	text-align: center;
+	margin: 0 5px; /* 버튼 간격 조정 */
 }
 
 .admin-login-btn {
-    background-color: #6c757d;
+	background-color: #6c757d;
 }
 
 .login-btn:hover {
-    background-color: #E67922;
+	background-color: #E67922;
 }
 
 .admin-login-btn:hover {
-    background-color: #5a6268;
+	background-color: #5a6268;
 }
-
 
 /*로그인버튼박스*/
 .login-btn-wrap {
@@ -102,8 +101,8 @@ input {
 }
 /*로그인버튼*/
 #login-btn {
-    width:430px;
-    height:50px;
+	width: 430px;
+	height: 50px;
 	background-color: #FF9040;
 	border: none;
 	color: #fff;
@@ -205,29 +204,27 @@ input {
 
 /* 구글 로그인 스타일 */
 .google-login-ko {
-    background-color: #FFFFFF; /* 흰색 */
-    padding: 10px 20px;
-    border-radius: 5px;
-    width: 400px;
-    justify-content: center;
-    align-items: center;
-    
+	background-color: #FFFFFF; /* 흰색 */
+	padding: 10px 20px;
+	border-radius: 5px;
+	width: 400px;
+	justify-content: center;
+	align-items: center;
 }
 
 .google-login-ko img {
-    width: 30px;
-    height: 30px;
+	width: 30px;
+	height: 30px;
 }
 
 .google-login-ko a {
-    
-    font-weight: bold;
-    font-size: 14px;
-    text-decoration: none;
+	font-weight: bold;
+	font-size: 14px;
+	text-decoration: none;
 }
 
 .google-login-ko:hover {
-    background-color: #f1f1f1; /* 호버 시 밝은 회색 */
+	background-color: #f1f1f1; /* 호버 시 밝은 회색 */
 }
 
 /*찾기 및 회원가입*/
@@ -237,7 +234,7 @@ input {
 	margin-top: 200px;
 }
 
-find-signup-wrap-admin{
+find-signup-wrap-admin {
 	height: 100px;
 	grid-template-columns: 1fr 1fr 1fr;
 	margin-top: 90px;
@@ -284,6 +281,14 @@ find-signup-wrap-admin{
 .sign-up {
 	margin: 3px;
 	font-size: 14px;
+}
+
+.error-message {
+	color: red;
+	border: 1px solid red;
+	padding: 3px;
+	margin-bottom: 15px;
+	border-radius: 5px;
 }
 
 /*가로 800px 이상일때*/
