--- a/src/main/resources/templates/views/admin/sellers-detail.html
+++ b/src/main/resources/templates/views/admin/sellers-detail.html
@@ -104,7 +104,7 @@
 						<p th:text="${seller.email}"></p>
 					</div>
 					<div class="info-item">
-						<label>휴대전화번호</label>
+						<label>휴대전화</label>
 						<p th:text="${seller.phoneNumber}"></p>
 					</div>
 					<div class="info-item">
