--- a/src/main/resources/templates/views/admin/sidebar.html
+++ b/src/main/resources/templates/views/admin/sidebar.html
@@ -2,7 +2,7 @@
 
 <div class="wrapper">
 	<nav class="sidebar">
-		<a href="/admin"><img src="/img/logo7.png" class="logo"></a>
+		<a href="/admin" class="no-style"><img src="/img/logo7.png" class="logo"></a>
 		<div class="user-info">
 			<p>관리자페이지</p>
 		</div>
@@ -28,7 +28,7 @@
 				<ul class="submenu">
 					<li><a href="/admin/users">고객 관리</a></li>
 					<li><a href="/admin/sellers">출판사 관리</a></li>
-					<li><a href="/admin/sellers/sign">출판사 회원 등록</a></li>
+					<li><a href="/admin/approve">출판사 회원 등록</a></li>
 				</ul>
 			</li>
 			<li>
