--- a/src/main/resources/static/css/admin/commons.css
+++ b/src/main/resources/static/css/admin/commons.css
@@ -130,3 +130,63 @@ td {
 	color: #ffd700;
 	font-size: 24px;
 }
+
+.Search-box {
+    background-color: white;
+    border: 0.5px solid #d9d9d9;
+    margin: 20px;
+    padding: 20px;
+}
+
+.Search-box label {
+    width: 100px;
+    font-weight: bold;
+    margin-right: 10px;
+    display: inline-block;
+}
+
+.Search-box form {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.Search-box input[type="text"] {
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid #ced4da;
+    flex-grow: 1;
+}
+
+.Search-box button {
+    background-color: white;
+    border: 1px solid #a9a9a9;
+    padding: 7px 15px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.Search-box button:hover {
+    background-color: #f0f0f0;
+}
+
+@media (max-width: 768px) {
+    .Search-box form {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .Search-box input[type="text"] {
+        width: calc(100% - 10px);
+        margin-bottom: 10px;
+    }
+
+    .Search-box button {
+        width: 100%;
+    }
+}
+
+button:hover {
+    background-color: #f0f0f0;
+}
+
